# SpleeterExe

./: CMakeLists.txt  Makefile  README.md  main.cpp
src/spleeter/: SpleeterProcessor.cpp
src/spleeter/include/: SpleeterProcessor.hpp
